# ImpressiveTitle

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  ChangeLog - DylanCheetah.txt  LEGAL  README  README.md  Solution.sln  game.vcxproj  game.vcxproj.filters  gameserver.vcxproj  include-relations.gv  includesProcessor.pl  loginserver.vcxproj
Game/: CMakeLists.txt
Game/include/: DebugTrace.h  HeightFunction.h  MagixAlertBox.h  MagixAnimated.h  MagixApplication.h  MagixCamera.h  MagixCampaignManager.h  MagixCharScreenManager.h  MagixChatManager.h  MagixCollisionManager.h  MagixConst.h  MagixCritter.h  MagixCritterManager.h  MagixEffectsManager.h  MagixEncryption.h  MagixExternalDefinitions.h  MagixFrameListener.h  MagixGUI.h  MagixGameStateManager.h  MagixHandler.h  MagixIndexedUnit.h  MagixInputManager.h  MagixItem.h  MagixItemManager.h  MagixLiving.h  MagixLoadingBar.h  MagixMiniMap.h  MagixNetworkDefines-Original_IT.h  MagixNetworkDefines.h  MagixNetworkManager.h  MagixObject.h  MagixOwnershipManager.h  MagixPlayer.h  MagixSkyManager.h  MagixSoundManager.h  MagixTimer.h  MagixUnit.h  MagixUnitManager.h  MagixWorld.h  MovableTextOverlay.h  (+3 more)
Game/res/: ogremagix.aps  ogremagix.rc
Game/src/: DebugTrace.cpp  MagixAlertBox.cpp  MagixAnimated.cpp  MagixApplication.cpp  MagixCamera.cpp  MagixCampaignManager.cpp  MagixCharScreenManager.cpp  MagixChatManager.cpp  MagixCollisionManager.cpp  MagixCritter.cpp  MagixCritterManager.cpp  MagixEffectsManager.cpp  MagixEncryption.cpp  MagixExternalDefinitions.cpp  MagixFrameListener.cpp  MagixGUI.cpp  MagixGameStateManager.cpp  MagixHandler.cpp  MagixIndexedUnit.cpp  MagixInputManager.cpp  MagixItem.cpp  MagixItemManager.cpp  MagixLiving.cpp  MagixLoadingBar.cpp  MagixMiniMap.cpp  MagixNetworkManager.cpp  MagixObject.cpp  MagixOwnershipManager.cpp  MagixPlayer.cpp  MagixSkyManager.cpp  MagixSoundManager.cpp  MagixTimer.cpp  MagixUnit.cpp  MagixUnitManager.cpp  MagixWorld.cpp  MovableTextOverlay.cpp  OgreMagixApp.cpp  OgreMagixFrameListener.cpp  SoundManager.cpp  main.cpp  (+3 more)
GameServer/: CMakeLists.txt
GameServer/include/: main.h
GameServer/src/: main.cpp
LoginServer/: CMakeLists.txt
LoginServer/include/: main.h
LoginServer/src/: main.cpp
config/: GameConfig.h
media/grass/: grass.material
media/materials/programs/: MagixPS.cg  VolumetricSunLight.compositor  VolumetricSunLight.material  VolumetricSunLight.program  VolumetricSunLight_FakeSky.hlsl  VolumetricSunLight_FinalBlend.hlsl  VolumetricSunLight_LightShafts.hlsl  VolumetricSunLight_Nontextured.hlsl  glow.cg  glow.program
media/materials/scripts/: Default.material  Examples.compositor  FX.material  GUIMat.material  MagixMod.material  MagixMod.program  MagixMod2.material  Ogre.material  Osprey.material  Scene.material  Underwater.material  WinterHare.material  antlers.material  bell.material  belt1.material  bracelet.material  bubble1.material  butterflyMat.material  candycane.material  collar.material  critters.material  critters2.material  drawpoint.material  egg.material  eyepatch.material  feather.material  ghost.material  glasses.material  halloween.material  hat.material  helmet1.material  nautilusMat.material  necklace1.material  necklace4.material  nosering.material  prayingmantisMat.material  ramhornsMat.material  raven_vulture_eagleMat.material  ribbon.material  rose.material  (+6 more)
media/models/: Body.mesh  Ceiling.mesh  Egg-Armature.skeleton  Egg.mesh  Egg2.mesh  Egg3.mesh  Egg4.mesh  Egg5.mesh  Head1-Armature.skeleton  Head1.mesh  Head2-Armature2.skeleton  Head2.mesh  Head3.mesh  Head4.mesh  Head5.mesh  Head6.mesh  Mane10.mesh  Mane11.mesh  Mane12.mesh  Mane13.mesh  Mane14.mesh  Mane15.mesh  Mane16.mesh  Mane17.mesh  Mane18.mesh  Mane19.mesh  Mane2-Armature.skeleton  Mane2.mesh  Mane20.mesh  Mane21.mesh  Mane22.mesh  Mane23.mesh  Mane24.mesh  Mane25.mesh  Mane26.mesh  Mane27.mesh  Mane3-Armature2.skeleton  Mane3.mesh  Mane4.mesh  Mane5.mesh  (+195 more)
media/overlays/: gui.fontdef  gui.overlay
media/particle/: FX.particle  Firefly.particle  aura.material  aura.particle  bonfire.material  bonfire.particle  eye.material  eye.particle  geyser.particle  item.material  item.particle  particles.material  water.particle  waterfall.particle  weather.particle  weather2.particle  worldEffects.particle
media/terrains/: Worlds.txt
media/terrains/Another Tunnel;1/: Another Tunnel;1.world  anotherTunnelCritters.cfg  anotherTunnelObjects.cfg  anotherTunnelterrain.cfg
media/terrains/Another Tunnel;10/: Another Tunnel;10.world
media/terrains/Another Tunnel;2/: Another Tunnel;2.world
media/terrains/Another Tunnel;3/: Another Tunnel;3.world
media/terrains/Another Tunnel;4/: Another Tunnel;4.world
media/terrains/Another Tunnel;5/: Another Tunnel;5.world
media/terrains/Another Tunnel;6/: Another Tunnel;6.world
media/terrains/Another Tunnel;7/: Another Tunnel;7.world
media/terrains/Another Tunnel;8/: Another Tunnel;8.world
media/terrains/Another Tunnel;9/: Another Tunnel;9.world
media/terrains/Ascension Island/: Ascension Island.world  AscensionIsland.material  (+2 more)
media/trees/: 3d-diggers_fir.material  GrassPatch.mesh  acaciaTree.material  acaciaTree.mesh  farn1.mesh.material  farn2.mesh.material  fern.material  fern.mesh  grassPatch.material  plant1.mesh.material  plant2.mesh.material  rock.material  rock.mesh  rockSlab.mesh  savannahTree.material  savannahTree.mesh  shrooms.material  shrub.material  shrub.mesh
media/weather/: CustomWeatherCycles.cfg  CustomWeathers.cfg  Limelight.weather  LimelightRainStarfall.weather  Slowsnow.weather  Slowsnowdarksky.weather  WeatherCycles.cfg  Weathers.cfg  darksky.weather  darkskyfireworks.weather  fireworks.weather  heavyRain.weather  petals.weather  rain.weather  rainStarfall.weather  redsky.weather  snow.weather  snow2.weather  snowStarfall.weather  starfall.weather  thunderstorm.weather  thunderstormRain.weather  weirdsky.weather
src/server/: MagixMainServer.cpp  MagixServer.cpp
static/client/: Campaigns.cfg  Hotkeys.cfg  Items.cfg  Plugins.cfg  Plugins_d.cfg  UnitEmotes.cfg  automation.cfg  resources.cfg
(+303 files in other folders)
